refartor: 특정 리뷰 조회 로직 수정
- 특정 리뷰의 상세 정보를 가져오는 비즈니스 코드 로직 수정
- Review 테이블 관련 제약 조건 추가 및 엔티티 수정
- 특정 id를 가진 리뷰 조회시 상태가 REGISTERED인 리뷰를 조회하도록 서비스 코드 수정
- reviewId를 가진 리뷰 사진 조회시 상태가 REGISTERED인 리뷰 사진을 조회하도록 서비스 코드 수정